Update overlay dimension

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 
       <!-- Marker 1 -->
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="./2.png" height="10" width="10"></a-plane>
+        <a-plane src="./2.png" height="4"></a-plane>
       </a-entity>
 
       <!-- Marker 2 -->
       <a-entity mindar-image-target="targetIndex: 1">
-        <a-plane src="./4.png" height="10" width="10"></a-plane>
+        <a-plane src="./4.png" height="4"></a-plane>
       </a-entity>
 
       <!-- Marker 3 -->
       <a-entity mindar-image-target="targetIndex: 2">
-        <a-plane src="./6.png" height="10" width="10"></a-plane>
+        <a-plane src="./6.png" height="4"></a-plane>
       </a-entity>
 
       <!-- Marker 4 -->
       <a-entity mindar-image-target="targetIndex: 3">
-        <a-plane src="./8.png" height="10" width="10"></a-plane>
+        <a-plane src="./8.png" height="4"></a-plane>
       </a-entity>
 
       <!-- Marker 5 -->
       <a-entity mindar-image-target="targetIndex: 4">
-        <a-plane src="./10.png" height="10" width="10"></a-plane>
+        <a-plane src="./10.png" height="4"></a-plane>
       </a-entity>
     </a-scene>
   </body>
